--- a/src/app/component/experts/free-slots/free-slots.component.html
+++ b/src/app/component/experts/free-slots/free-slots.component.html
@@ -19,37 +19,120 @@
                 </div>
             </div>
             <!-- buttons -->
-            <div class="-mt-10 mx-auto h-[500px] p-4 flex flex-col justify-center items-center">
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">Select Date</label>
-                    <input type="date" class="border rounded py-2 px-3 w-full">
-                </div>
-                <div class="flex space-x-1 w-full">
-                    <div class="w-1/2 ml-32 pl-52">
-                        <label class="block text-gray-700 text-sm font-bold mb-2">Start Time</label>
-                        <div class="flex space-x-2">
-                            <select class="border rounded py-2 px-3">
-                                <!-- Add your time options here -->
-                                <option value="00:00 AM">12:00 AM</option>
-                                <!-- Add more options if needed -->
-                            </select>
+            <div class="bg-gray-100 h-[500px] p-4 flex flex-col justify-center items-center w-1/2 ml-[350px] ">
+                <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                    <div class="mb-4 scroll scroll -mt-36">
+                        <label for="date" class="block text-gray-700 text-sm font-bold mb-2">Select Date</label>
+                        <input id="date" type="date" name="date" formControlName="date"
+                            class="border rounded py-2 px-3 w-full ">
+                        <div class="text-red-500"
+                            *ngIf="form.get('date')?.hasError('required') && (form.get('date')?.touched || formSubmitted)">
+                            Date is required.
                         </div>
                     </div>
-                    <div class="w-1/2">
-                        <label class="block text-gray-700 text-sm font-bold mb-2">End Time</label>
-                        <div class="flex space-x-2">
-                            <select class="border rounded py-2 px-3">
-                                <!-- Add your time options here -->
-                                <option value="00:00 AM">12:00 AM</option>
-                                <!-- Add more options if needed -->
-                            </select>
+                    <div class="flex space-x-4">
+                        <div class="w-2/3">
+                            <label for="startTime" class="block text-gray-700 text-sm font-bold mb-2">Start Time</label>
+                            <div class="flex space-x-2">
+                                <ng-container>
+                                    <select id="startTimeHour" name="startTimeHour"
+                                        class="border rounded py-2 px-3 w-[100px]" formControlName="startTimeHour"
+                                        required>
+                                        <!-- Add your time options here -->
+
+                                        <option value="01">1</option>
+                                        <option value="02">2 </option>
+                                        <option value="03">3</option>
+                                        <option value="04">4</option>
+                                        <option value="05">5</option>
+                                        <option value="06">6</option>
+                                        <option value="07">7 </option>
+                                        <option value="08">8 </option>
+                                        <option value="09">9 </option>
+                                        <option value="10">10 </option>
+                                        <option value="11">11 </option>
+                                        <option value="12">12</option>
+
+                                        <!-- Add more options if needed -->
+                                    </select>
+
+                                </ng-container>
+                                <select id="startTimeMinute" name="startTimeMinute"
+                                    class="border rounded py-2 px-3 w-1/3" formControlName="startTimeMinute" required>
+                                    <!-- Add your minutes options here -->
+                                    <option value="00">00</option>
+                                    <option value="15">15</option>
+                                    <option value="30">30</option>
+                                    <option value="45">45</option>
+                                    <!-- Add more options if needed -->
+                                </select>
+                                <select id="startTimeAmPm" name="startTimeAmPm" class="border rounded py-2 px-3 w-1/3"
+                                    formControlName="startTimeAmPm" required>
+                                    <!-- Add AM/PM options here -->
+                                    <option value="AM">AM</option>
+                                    <option value="PM">PM</option>
+                                </select>
+                            </div>
+
+                        </div>
+                        <div class="w-2/3">
+                            <label for="endTime" class="block text-gray-700 text-sm font-bold mb-2">End Time</label>
+                            <div class="flex space-x-2">
+                                <select id="endTimeHour" name="endTimeHour" class="border rounded py-2 px-3 w-[100px]"
+                                    formControlName="endTimeHour" required>
+                                    <!-- Add your time options here -->
+
+                                    <option value="01">1</option>
+                                    <option value="02">2 </option>
+                                    <option value="03">3</option>
+                                    <option value="04 ">4</option>
+                                    <option value="05 ">5 </option>
+                                    <option value="06 ">6 </option>
+                                    <option value="07 ">7</option>
+                                    <option value="08 ">8 </option>
+                                    <option value="09">9 </option>
+                                    <option value="10 ">10 </option>
+                                    <option value="11 ">11 </option>
+                                    <option value="12 ">12 </option>
+                                    <!-- Add more options if needed -->
+                                </select>
+                                <select id="endTimeMinute" name="endTimeMinute" class="border rounded py-2 px-3 w-2/4"
+                                    formControlName="endTimeMinute" required>
+                                    <!-- Add your minutes options here -->
+                                    <option value="00">00</option>
+                                    <option value="15">15</option>
+                                    <option value="30">30</option>
+                                    <option value="45">45</option>
+                                    <!-- Add more options if needed -->
+                                </select>
+                                <select id="endTimeAmPm" name="endTimeAmPm" class="border rounded py-2 px-3 w-2/4"
+                                    formControlName="endTimeAmPm" required>
+                                    <!-- Add AM/PM options here -->
+                                    <option value="AM">AM</option>
+                                    <option value="PM">PM</option>
+                                </select>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <button class="ml-7 mt-11 bg-orange-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-                    Create
-                </button>
+
+
+                    <div class="text-red-500 ml-[190px] mt-5"
+                        *ngIf="(form.get('endTimeMinute')?.hasError('required') || form.get('endTimeAmPm')?.hasError('required') || form.get('endTimeHour')?.hasError('required') || form.get('startTimeAmPm')?.hasError('required') || form.get('startTimeMinute')?.hasError('required') || form.get('startTimeHour')?.hasError('required')) && (form.get('endTimeMinute')?.touched || form.get('endTimeAmPm')?.touched || form.get('endTimeHour')?.touched || form.get('startTimeAmPm')?.touched || form.get('startTimeMinute')?.touched || form.get('startTimeHour')?.touched )|| formSubmitted ">
+                        All fields must be filled.
+                    </div>
+                    <div class="flex justify-center space-y-4 ">
+
+                        <p class="text-xs font-bold -ml-10 mt-5">Time Duration : 1 hour</p>
+                    </div>
+                    <div class="flex justify-center">
+                        <button type="submit"
+                            class="mt-8 bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded -ml-10">
+                            Create
+                        </button>
+                    </div>
+                </form>
             </div>
+
         </section>
 
 
