slot adding bug fixed,appoinment started

--- a/src/app/component/users/slots/slots.component.html
+++ b/src/app/component/users/slots/slots.component.html
@@ -1,36 +1,12 @@
-<section class="freeslotes">
+<div class="p-4 flex-col space-x-2 space-y-4 ml-32 flex-grow">
+    <ng-container *ngFor="let item of  slots">
+        <button (click)="payNow(item._id)"
+            class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
+            <span
+                class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+                {{item.slot_time}}
+            </span>
+        </button>
+    </ng-container>
 
-    <div class="-mt-10">
-        <h5 class="text-black font-medium text-lg pb-10">Available Slots:</h5>
-
-        <div class="-mt-5 ml-3  flex-col align-middle flex-grow space-x-2 space-y-2 ">
-
-            <button
-                class="bg-transparent border border-orange-500 py-2 px-2 text-xs text-orange-500 font-medium rounded-lg">2:00
-                pm
-                -
-                3:00 pm</button>
-            <button
-                class="bg-transparent border border-orange-500 py-2 px-2 text-xs text-orange-500 font-medium rounded-lg">2:00
-                pm
-                -
-                3:00 pm</button>
-            <button
-                class="bg-transparent border border-orange-500 py-2 px-2 text-xs text-orange-500 font-medium rounded-lg">2:00
-                pm
-                -
-                3:00 pm</button>
-            <button
-                class="bg-transparent border border-orange-500 py-2 px-2 text-xs text-orange-500 font-medium rounded-lg">2:00
-                pm
-                -
-                3:00 pm</button>
-
-
-        </div>
-
-
-
-    </div>
-
-</section>
+</div>
