--- a/src/app/component/users/view-expert/view-expert.component.html
+++ b/src/app/component/users/view-expert/view-expert.component.html
@@ -38,7 +38,7 @@
             <div class="grid grid-cols-3  bg-gray-200 ">
                 <!-- Left side with scrollable content -->
                 <div class="col-span-2 overflow-auto max-h-screen bg-white">
-                    <div class="flex justify-around">
+                    <div class="flex justify-around -ml-16">
 
                         <div class="pb-4  mt-7 mr-32 ">
 
@@ -84,7 +84,7 @@
                                     </div>
                                     <div class="flex">
                                         <div class="pl-6 pt-10 flex items-center">
-                                            <button (click)="payNow()"
+                                            <button (click)="BookVideo()"
                                                 class=" inline-flex items-center py-3 px-16  border font-medium border-[#059669] text-[#059669] rounded-lg  hover:-translate-y-1/2 hover:ease-in-out duration-300 ">
                                                 <svg class="w-[18px] h-[18px] text-[#059669] dark:text-white"
                                                     aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -98,7 +98,7 @@
                                         </div>
 
                                         <div class="pl-6 pt-10 flex items-center">
-                                            <button (click)="payNow()"
+                                            <button (click)="BookChat()"
                                                 class="py-3 inline-flex items-center   px-16 bg-[#059669] border font-medium border-[#059669] text-[#059669] rounded-lg  hover:translate-y-1/2 hover:ease-in-out duration-300 ">
                                                 <svg class="w-[18px] h-[18px] text-white dark:text-white"
                                                     aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -121,97 +121,14 @@
 
 
                     </div>
-                    <app-slots></app-slots>
+                    <ng-container *ngIf="showSlots">
+                        <app-slots [currentExpertId]="currentExpertId" [bookingType]="bookingType"></app-slots>
+                    </ng-container>
                     <div class="mr-32  -mt-7  ml-32 mb-10">
                         <!-- <div class="pt-4   font-medium text-lg">
                             <h5>Book Your Slotes:</h5>
                         </div> -->
-                        <div class="p-4 flex-col space-x-2 space-y-4">
-                            <button
-                                class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
-                                <span
-                                    class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-                                    2:00 pm-3:00 pm
-                                </span>
-                            </button>
-                            <button
-                                class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
-                                <span
-                                    class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-                                    2:00 pm-3:00 pm
-                                </span>
-                            </button>
-                            <button
-                                class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
-                                <span
-                                    class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-                                    2:00 pm-3:00 pm
-                                </span>
-                            </button>
-                            <button
-                                class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
-                                <span
-                                    class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-                                    2:00 pm-3:00 pm
-                                </span>
-                            </button>
-                            <button
-                                class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
-                                <span
-                                    class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-                                    2:00 pm-3:00 pm
-                                </span>
-                            </button>
-                            <button
-                                class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
-                                <span
-                                    class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-                                    2:00 pm-3:00 pm
-                                </span>
-                            </button>
-                            <button
-                                class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
-                                <span
-                                    class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-                                    2:00 pm-3:00 pm
-                                </span>
-                            </button>
-                            <button
-                                class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
-                                <span
-                                    class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-                                    2:00 pm-3:00 pm
-                                </span>
-                            </button>
-                            <button
-                                class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
-                                <span
-                                    class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-                                    2:00 pm-3:00 pm
-                                </span>
-                            </button>
-                            <button
-                                class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
-                                <span
-                                    class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-                                    2:00 pm-3:00 pm
-                                </span>
-                            </button>
-                            <button
-                                class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
-                                <span
-                                    class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-                                    2:00 pm-3:00 pm
-                                </span>
-                            </button>
-                            <button
-                                class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
-                                <span
-                                    class="relative px-2.5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-                                    2:00 pm-3:00 pm
-                                </span>
-                            </button>
-                        </div>
+
 
                     </div>
                     <div class="ml-20 ">
