socket io added in expert side

--- a/src/app/component/experts/chats/chats.component.html
+++ b/src/app/component/experts/chats/chats.component.html
@@ -134,7 +134,7 @@
                                 <!--first  message from expert -->
                                 <ng-container *ngFor="let item of chats">
 
-                                    <div class="  flex  pb-4 pt-4" *ngIf="item.senderType=='expert'">
+                                    <div class="  flex  pb-4 pt-4" *ngIf="item.senderType=='user'">
                                         <div class="flex  ">
                                             <div class="mt-8  px-2">
                                                 <img class="w-8 h-8 -mt-10 rounded-full "
@@ -149,7 +149,7 @@
 
                                     <!-- first message of user -->
 
-                                    <div class="  flex justify-end pb-4 pt-4 " *ngIf="item.senderType=='user'">
+                                    <div class="  flex justify-end pb-4 pt-4 " *ngIf="item.senderType=='expert'">
                                         <div class="flex  space-y-2 space-x-2">
 
                                             <div class="py-2 px-7 text-sm bg-slate-100 rounded-l-lg h-fit">
